[FIX] Vertical alignment.

--- a/Plugins/Modules/Rbs/Admin/Assets/css/rbschange.css
+++ b/Plugins/Modules/Rbs/Admin/Assets/css/rbschange.css
@@ -946,6 +946,7 @@ li.active .muted {
 	line-height: 20px;
 }
 
+td > a > .bullet-status,
 td > .bullet-status {
 	vertical-align: middle;
 }
